versioned_docs/version-0.25.0/how-to/backend/server-setup.mdx
---
sidebar_position: 0
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

# Set up your server

## Install the SDK

Install the SDK for the language of your choice. We provide libraries for [**Node**](https://github.com/fishjam-cloud/js-server-sdk) and [**Python**](https://github.com/fishjam-cloud/python-server-sdk).  
It's also possible to use the bare REST API, in this case you can skip this step.

<Tabs groupId="sdk">
  <TabItem value="npm" label="npm">
  
    ```bash
    npm install @fishjam-cloud/js-server-sdk
    ```

  </TabItem>

  <TabItem value="yarn" label="yarn">

    ```bash
    yarn add @fishjam-cloud/js-server-sdk
    ```

  </TabItem>

  <TabItem value="pip" label="pip">

    ```bash
    pip install fishjam-server-sdk
    ```

  </TabItem>

  <TabItem value="poetry" label="poetry">

    ```bash
    poetry add fishjam-server-sdk
    ```

  </TabItem>
  
  <TabItem value="uv" label="uv">

    ```bash
    uv add fishjam-server-sdk
    ```

  </TabItem>
</Tabs>

## Setup your client

Let's setup everything you need to start communicating with a Fishjam instance.  
First of all, view your app in the [**Fishjam developer panel**](https://fishjam.io/app) and copy your **Fishjam ID** and the **Management Token**.  
They are required to proceed. Now, we are ready to dive into the code.

<Tabs groupId="language">
  <TabItem value="ts" label="Typescript">
  
    ```ts
    process.env.FISHJAM_ID = "aaa";
    process.env.FISHJAM_MANAGEMENT_TOKEN = "bbb";

    // ---cut---
    import { FishjamClient } from '@fishjam-cloud/js-server-sdk';

    const fishjamId = process.env.FISHJAM_ID;
    const managementToken = process.env.FISHJAM_MANAGEMENT_TOKEN;

    const fishjamClient = new FishjamClient({ fishjamId, managementToken });
    ```

  </TabItem>

  <TabItem value="python" label="Python">

    ```python
    import os
    from fishjam import FishjamClient

    fishjam_id = os.environ["FISHJAM_ID"]
    management_token = os.environ["FISHJAM_MANAGEMENT_TOKEN"]

    fishjam_client = FishjamClient(fishjam_id, management_token)
    ```

  </TabItem>
</Tabs>

### Managing rooms

Create a room to get the `roomId` and be able to start adding peers.

<Tabs groupId="language">
  <TabItem value="ts" label="Typescript">
  
    ```ts
    import { FishjamClient } from '@fishjam-cloud/js-server-sdk';
    const fishjamClient = new FishjamClient({

        fishjamId: "https://fishjam.io",
        managementToken: "bbb",
    });
    // ---cut---
    const createdRoom = await fishjamClient.createRoom();

    const theSameRoom = await fishjamClient.getRoom(createdRoom.id);

    await fishjamClient.deleteRoom(theSameRoom.id)

    // puff, it's gone!
    ```

  </TabItem>

  <TabItem value="python" label="Python">

    ```python
    created_room = fishjam_client.create_room()

    the_same_room = fishjam_client.get_room(created_room.id)

    fishjam_client.delete_room(the_same_room.id)

    # puff, it's gone!
    ```

  </TabItem>

 </Tabs>

### Managing peers

Create a peer to obtain the peer token allowing your user to join the room.
At any time you can terminate user's access by deleting the peer.

<Tabs groupId="language">
  <TabItem value="ts" label="Typescript">
  
    ```ts
    import { FishjamClient } from '@fishjam-cloud/js-server-sdk';
    const fishjamClient = new FishjamClient({
        fishjamId: "https://fishjam.io",
        managementToken: "bbb",
    });
    const created_room = await fishjamClient.createRoom();
    // ---cut---
    const { peer, peerToken } = await fishjamClient.createPeer(created_room.id);

    await fishjamClient.deletePeer(created_room.id, peer.id);
    ```

  </TabItem>

  <TabItem value="python" label="Python">

    ```python
    peer, token = fishjam_client.create_peer(room_id)

    fishjam_client.delete_peer(room_id, peer.id)
    ```

  </TabItem>

 </Tabs>

#### Metadata

When creating a peer, you can also assign metadata to that peer, which can be read later with the [client SDK](../../how-to/client/metadata). This metadata can be only set when creating the peer and can't be updated later.

<Tabs groupId="language">
  <TabItem value="ts" label="Typescript">
  
    ```ts
    import { FishjamClient } from '@fishjam-cloud/js-server-sdk';
    const fishjamClient = new FishjamClient({
        fishjamId: "https://fishjam.io",
        managementToken: "bbb",
    });
    const created_room = await fishjamClient.createRoom();
    // ---cut---
    const { peer, peerToken } = await fishjamClient.createPeer(created_room.id, {
      metadata: { realName: 'Tom Reeves' },
    });
    ```

  </TabItem>

  <TabItem value="python" label="Python">

    ```py
    options = PeerOptions(
      metadata={"realName": "Tom Reeves"},
    )
    peer, token = self.fishjam_client.create_peer(room_id, options=options)
    ```

  </TabItem>
</Tabs>

## Listening to events

Fishjam instance is a stateful server that is emitting messages upon certain events.  
You can listen for those messages and react as you prefer.  
There are two options to obtain these.

### Webhooks

Simply pass the your webhook url as a `webhookUrl` parameter when creating a room.

<Tabs groupId="language">
  <TabItem value="ts" label="Typescript">
  
    ```ts
    import { FishjamClient } from '@fishjam-cloud/js-server-sdk';

    const fishjamClient = new FishjamClient({
        fishjamId: "https://fishjam.io",
        managementToken: "bbb",
    });
    // ---cut---
    const webhookUrl = "https://example.com/";
    await fishjamClient.createRoom({ webhookUrl });
    ```

  </TabItem>

  <TabItem value="python" label="Python">

    ```python
    from fishjam import RoomOptions

    options = RoomOptions(webhook_url="https://example.com/")

    fishjam_client.create_room(options)
    ```

  </TabItem>

</Tabs>

### SDK Notifier

Our SDKs come equipped with a Notifier allowing you to subscribe for messages.
It sets up a websocket connection with a Fishjam instance and provides a simple interface allowing you to handle messages.

<Tabs groupId="language">
  <TabItem value="ts" label="Typescript">
  
    ```ts
    const fishjamId = "https://fishjam.io";
    const managementToken = "bbb";
    // ---cut---
    import { FishjamWSNotifier } from '@fishjam-cloud/js-server-sdk';

    const onClose = console.log;
    const onError = console.error;
    const onConnectionFailed = console.error;

    const fishjamNotifier = new FishjamWSNotifier({ fishjamId, managementToken }, onError, onClose);

    fishjamNotifier.on('roomCreated', console.log);
    ```

  </TabItem>

  <TabItem value="python" label="Python">

    ```python
    import asyncio
    from fishjam import FishjamNotifier

    notifier = FishjamNotifier(fishjam_id, management_token)

    @notifier.on_server_notification
    def handle_notification(notification):
        match notification:
            case ServerMessageRoomCreated():
                print(notification)
            case _:
                ...

    async def run_notifier():
      notifier_task = asyncio.create_task(notifier.connect())

      # Wait for notifier to be ready to receive messages
      await notifier.wait_ready()

      await notifier_task

    asyncio.run(run_notifier())
    ```

  </TabItem>

</Tabs>
